--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,8 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.7.0/sql-wasm.min.js"></script>
 </head>
-<script src="./sql-wasm.js"></script>
-<script type="module">
-    const sqlPromise = initSqlJs({
-      locateFile: file => `./${file}`
-    });
-    const dataPromise = fetch("./AWLT2008R2Sample.sqlite").then(res => res.arrayBuffer());
-    const [SQL, buf] = await Promise.all([sqlPromise, dataPromise])
-    const db = new SQL.Database(new Uint8Array(buf));
-    window.db = db;
-    // const result = db.exec("select * from 'SalesLT.Product' limit 10");
-    // console.log(result);
-</script>
 <body>
   <app-root/>
 
